--- a/app/src/main/res/layout/fragment_home_tencent.xml
+++ b/app/src/main/res/layout/fragment_home_tencent.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/srlRefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@null"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <com.zhy.view.flowlayout.TagFlowLayout
+        android:id="@+id/tflContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
